--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="At Aalthara Football Association (also known as AFA), we are on a mission to bring the exhilaration of football and futsal to kids and adults across Japan."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/AfaLogo.svg" />
     <!--
