Makes necessary meta changes

--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,17 @@
       name="description"
       content="At Aalthara Football Association (also known as AFA), we are on a mission to bring the exhilaration of football and futsal to kids and adults across Japan."
     />
+    <meta property="og:title" content="AFA" />
+    <meta property="og:description" content="At Aalthara Football Association (also known as AFA), we are on a mission to bring the exhilaration of football and futsal to kids and adults across Japan." />
+    <meta property="og:image" content="http://aalthara-football.com/%PUBLIC_URL%/AfaLogo.svg" />
+    <meta property="og:url" content="http://aalthara-football.com/" />
+    <meta name="twitter:card" content="summary_large_image" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/AfaLogo.svg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/AfaLogo.svg" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
